form albums with @M0ntoto